# flir_stereo

./: .gitignore  README.md  ntp_time_sync.ino
catkin_ws/src/mmpug_common/: CMakeLists.txt  package.xml
catkin_ws/src/mmpug_common/include/common/: image_transport.h  math.h  ranges.h  serial.h  tf2.h  timer.h
catkin_ws/src/mmpug_flir_ros/: 42-flir-ros.rules  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
catkin_ws/src/mmpug_flir_ros/data/camera_info/example/: thermal_caminfo_flir_640.yaml
catkin_ws/src/mmpug_flir_ros/data/camera_info/mk_1/: thermal_caminfo_mk_1_left.yaml  thermal_caminfo_mk_1_right.yaml
catkin_ws/src/mmpug_flir_ros/data/camera_info/silver_payload/: thermal_caminfo_silver_payload.yaml
catkin_ws/src/mmpug_flir_ros/data/camera_info/yamaha_atv/: thermal_right.yaml
catkin_ws/src/mmpug_flir_ros/include/: flir_ros.h  flir_ros_sync.h
catkin_ws/src/mmpug_flir_ros/launch/: flir_pub_info.launch  flir_ros.launch  mk_1.launch  multiple_flir_ros.launch  silver_payload.launch
catkin_ws/src/mmpug_flir_ros/launch/example/: boson_test.launch  flir_ros.launch  multiple_flir_ros.launch
catkin_ws/src/mmpug_flir_ros/launch/wildfire/M600/: wildfire-m600.launch
catkin_ws/src/mmpug_flir_ros/launch/wildfire/subcanopy-drone-ordv2/: wildfire-subcanopy-drone-ordv2-both.launch  wildfire-subcanopy-drone-ordv2-single.launch
catkin_ws/src/mmpug_flir_ros/launch/yamaha_atv/: atv-both.launch
catkin_ws/src/mmpug_flir_ros/script/: add_caminfo_to_bag.py  check_teensy_status.py  trigger_ffc.py
catkin_ws/src/mmpug_flir_ros/script/Boson_SDK/: SDK_README.txt
catkin_ws/src/mmpug_flir_ros/script/Boson_SDK/FSLP_Files/: UART_HalfDuplex.py
catkin_ws/src/mmpug_flir_ros/script/set_flir_mode/: set_slave_mode.py
catkin_ws/src/mmpug_flir_ros/scripts/: trigger_ffc.py
catkin_ws/src/mmpug_flir_ros/src/: flir_ros.cpp  flir_ros_sync.cpp  flir_ros_ver2.cpp  rawBoson.cpp  rawBoson.h  set_sync_mode.cpp
catkin_ws/src/mmpug_r5timesync/: README.md
catkin_ws/src/mmpug_r5timesync/patches/: tegra194-aon.dtsi.patch  tegra194-mb1-bct-scr-cbb-mini.cfg.patch
catkin_ws/src/mmpug_r5timesync/r5code/l4t-rt/freertos-common/code-common/: tke-tegra.c
catkin_ws/src/mmpug_r5timesync/r5code/l4t-rt/freertos-common/include-common/: tke-tegra.h
catkin_ws/src/mmpug_r5timesync/r5code/l4t-rt/rt-aux-cpu-demo/: Makefile  main.c  timeserver.h
catkin_ws/src/mmpug_r5timesync/r5code/l4t-rt/rt-aux-cpu-demo/app/: ivc-echo-task.c  timer-app.c
catkin_ws/src/mmpug_r5timesync/r5code/l4t-rt/rt-aux-cpu-demo/drivers/: bpmp-ipc.c
catkin_ws/src/mmpug_r5timesync/r5code/l4t-rt/rt-aux-cpu-demo/soc/t19x/: target_specific.mk
catkin_ws/src/mmpug_r5timesync/syncr5clock/: Makefile
catkin_ws/src/mmpug_r5timesync/syncr5clock/include/: timesyncdata.h
catkin_ws/src/mmpug_r5timesync/syncr5clock/src/: readclocks.cpp  timesyncdata.cpp
src/flir_ros_sync/: CMakeLists.txt  README.md  package.xml
src/flir_ros_sync/config/: atv_both_camera_params.yaml
src/flir_ros_sync/data/camera_info/yamaha_atv/: thermal_left.yaml  thermal_right.yaml
src/flir_ros_sync/include/: flir_ros_sync.h  image_transport.h
src/flir_ros_sync/include/flir_ros_sync/: flir_ros_sync.h
src/flir_ros_sync/launch/wildfire/subcanopy-drone-ordv2/: wildfire-subcanopy-drone-ordv2-both.launch
src/flir_ros_sync/launch/yamaha_atv/: atv-both.launch  atv-single.launch  atv_both_cams.launch.py  atv_single_cam.launch.py  test-single.launch  test_single_cam.launch.py
src/flir_ros_sync/script/: check_status.py  check_teensy_status.py  rotate_image.py
src/flir_ros_sync/script/Boson_SDK_old/FSLP_Files/: Makefile
src/flir_ros_sync/src/: flir_ros_sync.cpp  rawBoson.cpp  set_sync_mode.cpp
src/mmpug_flir_ros/: README.md  nodelet_plugins.xml
src/mmpug_flir_ros/data/camera_info/yamaha_atv/: thermal_left.yaml
src/mmpug_flir_ros/launch/example/: boson_test.launch  flir_pub_info.launch
src/mmpug_flir_ros/launch/yamaha_atv/: atv-both.launch
src/mmpug_flir_ros/script/: trigger_ffc.py
src/mmpug_flir_ros/src/: flir_ros_sync.cpp  rawBoson.h
teensy_ntp_shm_sync/: Makefile  README.md  pps_trigger.ino  teensy_ntp_shm
teensy_ntp_shm_sync/ntp_time_sync/: ntp_time_sync.ino
teensy_ntp_shm_sync/pps_trigger/: pps_trigger.ino
teensy_ntp_shm_sync/src/: d_test.cpp  ntp_shm.cpp  ntp_shm.h  teensy.cpp  teensy.h  teensy_ntp_shm.cpp
teensy_ntp_shm_sync/time_sync_new/: time_sync_new.ino
thermal_ws/install/: local_setup.sh  setup.sh
thermal_ws/install/flir_ros_sync/include/flir_ros_sync/: flir_ros_sync.h  image_transport.h
thermal_ws/install/flir_ros_sync/lib/flir_ros_sync/: set_sync_mode
thermal_ws/install/flir_ros_sync/share/ament_index/resource_index/package_run_dependencies/: flir_ros_sync
thermal_ws/install/flir_ros_sync/share/ament_index/resource_index/rclcpp_components/: flir_ros_sync
thermal_ws/install/flir_ros_sync/share/flir_ros_sync/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
thermal_ws/install/flir_ros_sync/share/flir_ros_sync/cmake/: flir_ros_syncConfig.cmake
thermal_ws/install/flir_ros_sync/share/flir_ros_sync/launch/yamaha_atv/: atv_both.launch.py  atv_single.launch.py  test-single.launch  test_single.launch.py
thermal_ws/src/flir_ros_sync/: CMakeLists.txt  README.md  package.xml
thermal_ws/src/flir_ros_sync/include/flir_ros_sync/: flir_ros_sync.h
thermal_ws/src/flir_ros_sync/launch/example/: flir_ros_rotate.launch  mk_1_pub_caminfo.launch
thermal_ws/src/flir_ros_sync/launch/yamaha_atv/: atv_both_cams.launch.py  atv_single.launch.py  atv_single_cam.launch.py  test_single.launch.py  test_single_cam.launch.py
thermal_ws/src/flir_ros_sync/launch/yamaha_atv/old_launch/: atv-both.launch  atv-single.launch
thermal_ws/src/flir_ros_sync/script/: trigger_ffc.py
thermal_ws/src/flir_ros_sync/src/: flir_ros_sync.cpp  random.txt  set_sync_mode.cpp
